# StockListo

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_seed_admin.py  0003_auth_alerts.py  0003_update_admin_email.py  0005_system_config.py
backend/app/: main.py  worker.py
backend/app/api/v1/routers/: alerts.py  auth.py  categories.py  config.py  dispatch_carts.py  dispatches.py  health.py  kardex.py  products.py  reports.py  stock_ingress.py  suppliers.py  users.py
backend/app/core/: config.py  logging.py  problems.py  security.py
backend/app/db/: session.py  uow.py
backend/app/models/: __init__.py  alerta_sistema.py  base.py  categoria.py  configuracion_sistema.py  lote.py  movimiento_kardex.py  producto.py  proveedor.py  refresh_token.py  usuario.py
backend/app/repositories/: alerta_repo.py  base_repo.py  categoria_repo.py  configuracion_repo.py  kardex_repo.py  lote_repo.py  producto_repo.py  proveedor_repo.py  refresh_token_repo.py  usuario_repo.py
backend/app/schemas/: auth.py  common.py  ingress.py  producto.py
backend/app/services/: auth_service.py  dispatch_service.py  ingress_service.py
backend/app/tasks/: cart_audit.py  expiring_lots.py  low_stock.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  routes.tsx
infra/: .env.example  docker-compose.prod.yml  docker-compose.yml  init.sql
infra/nginx/: default.conf
(+31 files in other folders)
